[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaart"
version = "0.1.0"
description = "MetaArt – multi-model generative art framework"
readme = "README.md"
authors = [{name = "AndroDoge"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    # TODO: fill from original requirements.txt (awaiting list)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "black",
    "isort",
    "build",
    "pre-commit"
]

[project.scripts]
metaart = "metaart.__main__:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","N","ANN"]
ignore = ["ANN101","ANN102"]
src = ["src"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
pythonpath = ["src"]
